--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 style="font-size:36px;"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        <h2 style="color:grey;font-size:28px;">Data Scientist</h2>
+        <h1 style="font-size:36px;text-align:center;"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h2 style="color:grey;font-size:24px;text-align:center;font-weight: normal"><i>Data Scientist</i></h2>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
