--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <meta property='og:title' content='Harshul Varma Data Science Portfolio'/>
+    <meta property='og:image' content='//raw.githubusercontent.com/harshulvarma/harshulvarma.github.io/master/images/dsportfolio.PNG'/>
+    <meta property='og:description' content='Harshul Varma Data Science Portfolio'/>
+    <meta property='og:url' content='//harshulvarma.github.io/'/>
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
